--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,19 @@
         "name": "next"
       }
     ],
+    "types": ["@testing-library/jest-dom"],
+    "baseUrl": "src/",
     "paths": {
-      "components/*": ["./src/*"]
+      "@/components/*": ["components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "jest.setup.js",
+    "jest.config.js"
+  ],
   "exclude": ["node_modules"]
 }
